[tool.poetry]
name = "python-spymock"
version = "0.0.0"
description = ""
authors = ["lambdalisue <lambdalisue@hashnote.net>"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/fixpoint/python-spymock"
repository = "https://github.com/fixpoint/python-spymock"
packages = [
    { include = "spymock" }
]

[tool.poetry.dependencies]
python = "^3.9"

[tool.poetry.dev-dependencies]
black = "^20.8b1"
isort = "^5.6.4"
flake8 = "^3.8.4"
autoflake = "^1.4"
pytest = "^6.2.1"
mypy = "^0.790"

[build-system]
requires = ["poetry-core>=1.0.0", "poetry-dynamic-versioning"]
build-backend = "poetry.core.masonry.api"

[tool.poetry-dynamic-versioning]
enable = true

[tool.isort]
# https://black.readthedocs.io/en/stable/compatible_configs.html#isort
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
line_length = 88
skip_glob = [
    ".venv",
]

[tool.black]
line-length = 88

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "--strict-markers --doctest-modules"
doctest_optionflags = "NORMALIZE_WHITESPACE IGNORE_EXCEPTION_DETAIL"
